@@ -9,8 +9,8 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -19,7 +19,7 @@ public class RecipeServiceImpl implements RecipeService {
     private final RecipeRepository recipeRepository;
 
     public List<Recipe> getAllRecipes(int page, int records) {
-        return recipeRepository.findAll().stream().skip((page-1)*records).limit(records).toList();
+        return recipeRepository.findAll().stream().skip((page-1)*records).limit(records).collect(Collectors.toList());
     }
 
     @Override
@@ -40,7 +40,8 @@ public class RecipeServiceImpl implements RecipeService {
 
     @Override
     public List<Recipe> getRecipesWithoutAlergens(List<Allergens> alergens, int page, int records){
-        return recipeRepository.findRecipesByAllergensNotContains(alergens).stream().skip((page-1)*records).limit(records).toList();
+        return recipeRepository.findRecipesByAllergensNotContains(alergens).stream().skip((page-1)*records).
+                limit(records).collect(Collectors.toList());
     }
 
     @Override
